--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <!-- <script src="%PUBLIC_URL%/microsoft.cognitiveservices.speech.sdk.bundle.js"></script>; -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="%PUBLIC_URL%/microsoft.cognitiveservices.speech.sdk.bundle.js"></script>;
     <div id="root"></div>
     <!--
       This HTML file is a template.
