--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script src="%PUBLIC_URL%/microsoft.cognitiveservices.speech.sdk.bundle.js"></script>;
+    <script src="%PUBLIC_URL%/microsoft.cognitiveservices.speech.sdk.bundle.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
